<resources>
    <string name="app_name">calculadora1</string>
    <string name="btMult">*</string>
    <string name="btSub">-</string>
    <string name="btSoma">+</string>
    <string name="btDiv">/</string>
    <string name="tt3">O resultado é:</string>
    <string name="tt1">Valor 1:</string>
    <string name="vlr1" />
    <string name="tt2">Valor 2:</string>
    <string name="vlr2">" "</string>
</resources>