<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="93dp">

        <Button
            android:id="@+id/btMult"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="396dp"
            android:layout_marginEnd="128dp"
            android:layout_marginRight="128dp"
            android:text="@string/btMult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btSub"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="396dp"
            android:layout_marginEnd="236dp"
            android:layout_marginRight="236dp"
            android:text="@string/btSub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btDiv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="396dp"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:text="@string/btDiv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btSoma"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="396dp"
            android:layout_marginEnd="308dp"
            android:layout_marginRight="308dp"
            android:text="@string/btSoma"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="530dp"
            android:layout_marginEnd="165dp"
            android:layout_marginRight="165dp"
            android:layout_marginBottom="116dp"
            android:text="@string/tt3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tt1"
            android:layout_width="71dp"
            android:layout_height="26dp"
            android:layout_marginStart="168dp"
            android:layout_marginLeft="168dp"
            android:layout_marginTop="48dp"
            android:text="@string/tt1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tt2"
            android:layout_width="71dp"
            android:layout_height="26dp"
            android:layout_marginStart="168dp"
            android:layout_marginLeft="168dp"
            android:layout_marginTop="228dp"
            android:text="@string/tt2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/vlr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginLeft="101dp"
            android:layout_marginTop="129dp"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/vlr2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginLeft="101dp"
            android:layout_marginTop="280dp"
            android:ems="10"
            android:inputType="numberSigned|number|numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>